13-jenkins-operator/2-jenkins-opertor-ingress_kctl.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-operator-ingress
  namespace: jenkins-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    secretName: ssl-cert-production
  rules:
  - host: example.com
    http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-operator-http-jenkins
            port:
              number: 443
